--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=DCOMSAssignment
 application.vendor=User
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -88,5 +89,5 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+src.java.dir=src\\main\\java
+test.java.dir=src\\test\\java
